parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> input
Rule 1     input -> <empty>
Rule 2     input -> command input
Rule 3     command -> COMMENT
Rule 4     SYMBOL -> XYZ
Rule 5     SYMBOL -> ID
Rule 6     TEXT -> SYMBOL
Rule 7     TEXT -> STRING
Rule 8     NUMBER -> DOUBLE
Rule 9     command -> POP
Rule 10    command -> PUSH
Rule 11    command -> SCREEN INT INT
Rule 12    command -> SCREEN
Rule 13    command -> SAVE TEXT TEXT
Rule 14    command -> DISPLAY
Rule 15    command -> SPHERE NUMBER NUMBER NUMBER NUMBER
Rule 16    command -> SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
Rule 17    command -> SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 18    command -> SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 19    command -> CONE NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 20    command -> CONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 21    command -> CONE NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 22    command -> CONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 23    command -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 24    command -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 25    command -> TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 26    command -> TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 27    command -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 28    command -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 29    command -> BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 30    command -> BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 31    command -> PYRAMID NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 32    command -> PYRAMID NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 33    command -> PYRAMID SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 34    command -> PYRAMID SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 35    command -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 36    command -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 37    command -> LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
Rule 38    command -> LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
Rule 39    command -> LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 40    command -> LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 41    command -> LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
Rule 42    command -> LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
Rule 43    command -> MOVE NUMBER NUMBER NUMBER SYMBOL
Rule 44    command -> MOVE NUMBER NUMBER NUMBER
Rule 45    command -> SCALE NUMBER NUMBER NUMBER SYMBOL
Rule 46    command -> SCALE NUMBER NUMBER NUMBER
Rule 47    command -> ROTATE XYZ NUMBER SYMBOL
Rule 48    command -> ROTATE XYZ NUMBER
Rule 49    command -> FRAMES INT
Rule 50    command -> BASENAME TEXT
Rule 51    command -> VARY SYMBOL INT INT NUMBER NUMBER
Rule 52    command -> SET SYMBOL NUMBER
Rule 53    command -> SET_KNOBS NUMBER
Rule 54    command -> AMBIENT INT INT INT
Rule 55    command -> CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 56    command -> CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 57    command -> LIGHT SYMBOL NUMBER NUMBER NUMBER INT INT INT
Rule 58    command -> SHADING SHADING_TYPE
Rule 59    command -> CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 60    command -> GENERATE_RAYFILES
Rule 61    command -> MESH CO TEXT
Rule 62    command -> MESH SYMBOL CO TEXT
Rule 63    command -> MESH CO TEXT SYMBOL
Rule 64    command -> MESH SYMBOL CO TEXT SYMBOL
Rule 65    command -> SAVE_KNOBS SYMBOL
Rule 66    command -> SAVE_COORDS SYMBOL
Rule 67    command -> TWEEN NUMBER NUMBER SYMBOL SYMBOL
Rule 68    command -> FOCAL NUMBER
Rule 69    command -> WEB
Rule 70    command -> TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

Terminals, with rules where they appear

AMBIENT              : 54
BASENAME             : 50
BOX                  : 27 28 29 30
CAMERA               : 59
CO                   : 61 62 63 64
COMMENT              : 3
CONE                 : 19 20 21 22
CONSTANTS            : 55 56
DISPLAY              : 14
DOUBLE               : 8
FOCAL                : 68
FRAMES               : 49
GENERATE_RAYFILES    : 60
ID                   : 5
INT                  : 11 11 49 51 51 54 54 54 57 57 57
LIGHT                : 57
LINE                 : 35 36 37 38 39 40 41 42
MESH                 : 61 62 63 64
MOVE                 : 43 44
POP                  : 9
PUSH                 : 10
PYRAMID              : 31 32 33 34
ROTATE               : 47 48
SAVE                 : 13
SAVE_COORDS          : 66
SAVE_KNOBS           : 65
SCALE                : 45 46
SCREEN               : 11 12
SET                  : 52
SET_KNOBS            : 53
SHADING              : 58
SHADING_TYPE         : 58
SPHERE               : 15 16 17 18
STRING               : 7
TEXTURE              : 70
TORUS                : 23 24 25 26
TWEEN                : 67
VARY                 : 51
WEB                  : 69
XYZ                  : 4 47 48
error                : 

Nonterminals, with rules where they appear

NUMBER               : 15 15 15 15 16 16 16 16 17 17 17 17 18 18 18 18 19 19 19 19 19 20 20 20 20 20 21 21 21 21 21 22 22 22 22 22 23 23 23 23 23 24 24 24 24 24 25 25 25 25 25 26 26 26 26 26 27 27 27 27 27 27 28 28 28 28 28 28 29 29 29 29 29 29 30 30 30 30 30 30 31 31 31 31 31 31 32 32 32 32 32 32 33 33 33 33 33 33 34 34 34 34 34 34 35 35 35 35 35 35 36 36 36 36 36 36 37 37 37 37 37 37 38 38 38 38 38 38 39 39 39 39 39 39 40 40 40 40 40 40 41 41 41 41 41 41 42 42 42 42 42 42 43 43 43 44 44 44 45 45 45 46 46 46 47 48 51 51 52 53 55 55 55 55 55 55 55 55 55 56 56 56 56 56 56 56 56 56 56 56 56 57 57 57 59 59 59 59 59 59 67 67 68 70 70 70 70 70 70 70 70 70 70 70 70
SYMBOL               : 6 16 17 18 18 20 21 22 22 24 25 26 26 28 29 30 30 32 33 34 34 36 37 38 38 39 40 40 41 41 42 42 42 43 45 47 51 52 55 56 57 62 63 64 64 65 66 67 67 70
TEXT                 : 13 13 50 61 62 63 64
command              : 2
input                : 2 0

Parsing method: LALR

state 0

    (0) S' -> . input
    (1) input -> .
    (2) input -> . command input
    (3) command -> . COMMENT
    (9) command -> . POP
    (10) command -> . PUSH
    (11) command -> . SCREEN INT INT
    (12) command -> . SCREEN
    (13) command -> . SAVE TEXT TEXT
    (14) command -> . DISPLAY
    (15) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER
    (16) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
    (17) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
    (18) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
    (19) command -> . CONE NUMBER NUMBER NUMBER NUMBER NUMBER
    (20) command -> . CONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (21) command -> . CONE NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (22) command -> . CONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (23) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (25) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (26) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (27) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (28) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (29) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (30) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (31) command -> . PYRAMID NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (32) command -> . PYRAMID NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (33) command -> . PYRAMID SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (34) command -> . PYRAMID SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (35) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (36) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (37) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (38) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (39) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (40) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (41) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (42) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (43) command -> . MOVE NUMBER NUMBER NUMBER SYMBOL
    (44) command -> . MOVE NUMBER NUMBER NUMBER
    (45) command -> . SCALE NUMBER NUMBER NUMBER SYMBOL
    (46) command -> . SCALE NUMBER NUMBER NUMBER
    (47) command -> . ROTATE XYZ NUMBER SYMBOL
    (48) command -> . ROTATE XYZ NUMBER
    (49) command -> . FRAMES INT
    (50) command -> . BASENAME TEXT
    (51) command -> . VARY SYMBOL INT INT NUMBER NUMBER
    (52) command -> . SET SYMBOL NUMBER
    (53) command -> . SET_KNOBS NUMBER
    (54) command -> . AMBIENT INT INT INT
    (55) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (56) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (57) command -> . LIGHT SYMBOL NUMBER NUMBER NUMBER INT INT INT
    (58) command -> . SHADING SHADING_TYPE
    (59) command -> . CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (60) command -> . GENERATE_RAYFILES
    (61) command -> . MESH CO TEXT
    (62) command -> . MESH SYMBOL CO TEXT
    (63) command -> . MESH CO TEXT SYMBOL
    (64) command -> . MESH SYMBOL CO TEXT SYMBOL
    (65) command -> . SAVE_KNOBS SYMBOL
    (66) command -> . SAVE_COORDS SYMBOL
    (67) command -> . TWEEN NUMBER NUMBER SYMBOL SYMBOL
    (68) command -> . FOCAL NUMBER
    (69) command -> . WEB
    (70) command -> . TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

    $end            reduce using rule 1 (input -> .)
    COMMENT         shift and go to state 13
    POP             shift and go to state 15
    PUSH            shift and go to state 18
    SCREEN          shift and go to state 23
    SAVE            shift and go to state 34
    DISPLAY         shift and go to state 11
    SPHERE          shift and go to state 26
    CONE            shift and go to state 8
    TORUS           shift and go to state 20
    BOX             shift and go to state 1
    PYRAMID         shift and go to state 14
    LINE            shift and go to state 10
    MOVE            shift and go to state 4
    SCALE           shift and go to state 3
    ROTATE          shift and go to state 29
    FRAMES          shift and go to state 9
    BASENAME        shift and go to state 12
    VARY            shift and go to state 5
    SET             shift and go to state 27
    SET_KNOBS       shift and go to state 31
    AMBIENT         shift and go to state 33
    CONSTANTS       shift and go to state 35
    LIGHT           shift and go to state 17
    SHADING         shift and go to state 28
    CAMERA          shift and go to state 16
    GENERATE_RAYFILES shift and go to state 2
    MESH            shift and go to state 30
    SAVE_KNOBS      shift and go to state 24
    SAVE_COORDS     shift and go to state 7
    TWEEN           shift and go to state 25
    FOCAL           shift and go to state 21
    WEB             shift and go to state 22
    TEXTURE         shift and go to state 6

    input                          shift and go to state 19
    command                        shift and go to state 32

state 1

    (27) command -> BOX . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (28) command -> BOX . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (29) command -> BOX . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (30) command -> BOX . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (8) NUMBER -> . DOUBLE
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    DOUBLE          shift and go to state 36
    XYZ             shift and go to state 40
    ID              shift and go to state 39

    SYMBOL                         shift and go to state 37
    NUMBER                         shift and go to state 38

state 2

    (60) command -> GENERATE_RAYFILES .

    COMMENT         reduce using rule 60 (command -> GENERATE_RAYFILES .)
    POP             reduce using rule 60 (command -> GENERATE_RAYFILES .)
    PUSH            reduce using rule 60 (command -> GENERATE_RAYFILES .)
    SCREEN          reduce using rule 60 (command -> GENERATE_RAYFILES .)
    SAVE            reduce using rule 60 (command -> GENERATE_RAYFILES .)
    DISPLAY         reduce using rule 60 (command -> GENERATE_RAYFILES .)
    SPHERE          reduce using rule 60 (command -> GENERATE_RAYFILES .)
    CONE            reduce using rule 60 (command -> GENERATE_RAYFILES .)
    TORUS           reduce using rule 60 (command -> GENERATE_RAYFILES .)
    BOX             reduce using rule 60 (command -> GENERATE_RAYFILES .)
    PYRAMID         reduce using rule 60 (command -> GENERATE_RAYFILES .)
    LINE            reduce using rule 60 (command -> GENERATE_RAYFILES .)
    MOVE            reduce using rule 60 (command -> GENERATE_RAYFILES .)
    SCALE           reduce using rule 60 (command -> GENERATE_RAYFILES .)
    ROTATE          reduce using rule 60 (command -> GENERATE_RAYFILES .)
    FRAMES          reduce using rule 60 (command -> GENERATE_RAYFILES .)
    BASENAME        reduce using rule 60 (command -> GENERATE_RAYFILES .)
    VARY            reduce using rule 60 (command -> GENERATE_RAYFILES .)
    SET             reduce using rule 60 (command -> GENERATE_RAYFILES .)
    SET_KNOBS       reduce using rule 60 (command -> GENERATE_RAYFILES .)
    AMBIENT         reduce using rule 60 (command -> GENERATE_RAYFILES .)
    CONSTANTS       reduce using rule 60 (command -> GENERATE_RAYFILES .)
    LIGHT           reduce using rule 60 (command -> GENERATE_RAYFILES .)
    SHADING         reduce using rule 60 (command -> GENERATE_RAYFILES .)
    CAMERA          reduce using rule 60 (command -> GENERATE_RAYFILES .)
    GENERATE_RAYFILES reduce using rule 60 (command -> GENERATE_RAYFILES .)
    MESH            reduce using rule 60 (command -> GENERATE_RAYFILES .)
    SAVE_KNOBS      reduce using rule 60 (command -> GENERATE_RAYFILES .)
    SAVE_COORDS     reduce using rule 60 (command -> GENERATE_RAYFILES .)
    TWEEN           reduce using rule 60 (command -> GENERATE_RAYFILES .)
    FOCAL           reduce using rule 60 (command -> GENERATE_RAYFILES .)
    WEB             reduce using rule 60 (command -> GENERATE_RAYFILES .)
    TEXTURE         reduce using rule 60 (command -> GENERATE_RAYFILES .)
    $end            reduce using rule 60 (command -> GENERATE_RAYFILES .)


state 3

    (45) command -> SCALE . NUMBER NUMBER NUMBER SYMBOL
    (46) command -> SCALE . NUMBER NUMBER NUMBER
    (8) NUMBER -> . DOUBLE

    DOUBLE          shift and go to state 36

    NUMBER                         shift and go to state 41

state 4

    (43) command -> MOVE . NUMBER NUMBER NUMBER SYMBOL
    (44) command -> MOVE . NUMBER NUMBER NUMBER
    (8) NUMBER -> . DOUBLE

    DOUBLE          shift and go to state 36

    NUMBER                         shift and go to state 42

state 5

    (51) command -> VARY . SYMBOL INT INT NUMBER NUMBER
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 40
    ID              shift and go to state 39

    SYMBOL                         shift and go to state 43

state 6

    (70) command -> TEXTURE . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 40
    ID              shift and go to state 39

    SYMBOL                         shift and go to state 44

state 7

    (66) command -> SAVE_COORDS . SYMBOL
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 40
    ID              shift and go to state 39

    SYMBOL                         shift and go to state 45

state 8

    (19) command -> CONE . NUMBER NUMBER NUMBER NUMBER NUMBER
    (20) command -> CONE . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (21) command -> CONE . NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (22) command -> CONE . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (8) NUMBER -> . DOUBLE
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    DOUBLE          shift and go to state 36
    XYZ             shift and go to state 40
    ID              shift and go to state 39

    SYMBOL                         shift and go to state 46
    NUMBER                         shift and go to state 47

state 9

    (49) command -> FRAMES . INT

    INT             shift and go to state 48


state 10

    (35) command -> LINE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (36) command -> LINE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (37) command -> LINE . NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (38) command -> LINE . NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (39) command -> LINE . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (40) command -> LINE . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (41) command -> LINE . SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (42) command -> LINE . SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (8) NUMBER -> . DOUBLE
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    DOUBLE          shift and go to state 36
    XYZ             shift and go to state 40
    ID              shift and go to state 39

    SYMBOL                         shift and go to state 50
    NUMBER                         shift and go to state 49

state 11

    (14) command -> DISPLAY .
